[gd_scene load_steps=15 format=3 uid="uid://ckep2jcjc5p1e"]

[ext_resource type="Script" path="res://Scenes/Player/Space/Script/Player/PlayerShipController.gd" id="1_tki5j"]
[ext_resource type="Texture2D" uid="uid://bo6xgm8ydyfgd" path="res://Assets/Models/OBJ/Striker/Striker_Purple.png" id="2_kbmhf"]
[ext_resource type="ArrayMesh" uid="uid://cgtqof5m6msyr" path="res://Assets/Models/OBJ/Striker/Striker.obj" id="3_2f32q"]
[ext_resource type="Script" path="res://Scripts/Turret/TurretManager.gd" id="4_ygpvd"]
[ext_resource type="PackedScene" uid="uid://g8um3ww377tn" path="res://Scenes/Turrets/Cannon.tscn" id="5_0onbf"]
[ext_resource type="PackedScene" uid="uid://bdwlhv46su6r8" path="res://Scenes/Turrets/Bullet.tscn" id="6_r5xlj"]
[ext_resource type="Script" path="res://Scripts/Area3D.gd" id="10_xiu56"]
[ext_resource type="Script" path="res://Scenes/Player/Space/Script/UI.gd" id="11_7hr8e"]
[ext_resource type="Script" path="res://Scenes/Player/Space/Script/Analog_input.gd" id="12_byp8v"]
[ext_resource type="PackedScene" uid="uid://bdxdivqbuum6b" path="res://Scenes/Menu/health_bar_3d.tscn" id="13_paa5p"]
[ext_resource type="PackedScene" uid="uid://qktfoyk8fhxg" path="res://Scenes/Menu/shield_bar_3d.tscn" id="14_mgcdj"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vhjhs"]
albedo_texture = ExtResource("2_kbmhf")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_rrrku"]
points = PackedVector3Array(-2.58367, -1.36578, -1.18786, 2.63254, -1.23189, -1.45599, 2.63254, -1.36578, -1.45599, 1.56234, -0.429628, 4.96397, 0.893464, 1.30906, -2.39108, -1.51347, -0.69714, 4.96397, -1.24592, 1.30906, -0.518381, -0.309493, -0.0287736, -3.59597, 2.49877, -1.49967, -1.8565, -2.4499, -1.49967, -1.8565, 1.56234, -0.830758, 4.42772, -1.64725, -0.429628, 4.69585, -0.309493, 0.506249, -3.59597, -2.4499, -1.49967, -1.18786, 1.02724, 1.30906, -2.25785, -1.3797, 0.238738, -2.52598, 0.224588, 0.506249, -3.59597, 2.49877, -1.49967, -1.18786, -1.51347, -0.429628, 4.96397, -1.64725, -0.830758, 4.42772, 2.49877, -1.09827, -1.8565, 1.82989, -0.563247, 3.35857, 1.56234, -0.69714, 4.96397, -1.24592, 1.30906, -0.653283, -1.78102, -0.563247, 4.16127, 0.224588, -0.0287736, -3.59597, 1.02724, 1.30906, -2.39108, -1.11215, 1.30906, -0.518381, 1.69612, -0.964652, 3.35857, 1.69612, -0.563247, 4.56262, 1.69612, -0.830758, 4.2945, -1.78102, -0.964652, 3.35857)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_jb0iq"]
points = PackedVector3Array(0, 0, 0, 77, -42, -100, 77, 45, -100, -77, 45, -100, -77, -42, -100)

[node name="Striker" type="CharacterBody3D"]
script = ExtResource("1_tki5j")

[node name="Striker" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 3.48787e-16, 8.74228e-08, 3.48787e-16, 1, -3.48787e-16, -8.74228e-08, -3.48787e-16, -1, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_vhjhs")
mesh = ExtResource("3_2f32q")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-1, 3.48787e-16, 8.74228e-08, 3.48787e-16, 1, -3.48787e-16, -8.74228e-08, -3.48787e-16, -1, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_rrrku")

[node name="TurretManager" type="Node3D" parent="."]
script = ExtResource("4_ygpvd")

[node name="Cannon" parent="TurretManager" instance=ExtResource("5_0onbf")]
transform = Transform3D(0.66523, 0.746638, -8.74228e-08, 0.746638, -0.66523, -3.48787e-16, -5.81563e-08, -6.52732e-08, -1, -1.522, -0.913, 0.654)
max_elevation = 2.08165e-12
min_rotation = 2.08165e-12
max_rotation = 2.08165e-12
fire_rate = 0.1
fixed = true
laser_scene = ExtResource("6_r5xlj")

[node name="Cannon2" parent="TurretManager" instance=ExtResource("5_0onbf")]
transform = Transform3D(0.665726, -0.746197, 8.33131e-08, -0.746197, -0.665726, 2.64893e-08, 3.56974e-08, -7.98025e-08, -1, 1.522, -0.913, 0.654)
max_elevation = 2.08165e-12
min_rotation = 2.08165e-12
max_rotation = 2.08165e-12
fire_rate = 0.1
fixed = true
laser_scene = ExtResource("6_r5xlj")

[node name="Thrusters" type="Node3D" parent="."]

[node name="CameraRoot" type="Node3D" parent="."]

[node name="CameraYaw" type="Node3D" parent="CameraRoot"]

[node name="CameraPitch" type="Node3D" parent="CameraRoot/CameraYaw"]

[node name="Camera3D" type="Camera3D" parent="CameraRoot/CameraYaw/CameraPitch"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.310676, -0.308746)

[node name="Area3D" type="Area3D" parent="CameraRoot/CameraYaw/CameraPitch/Camera3D"]
collision_layer = 5
script = ExtResource("10_xiu56")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CameraRoot/CameraYaw/CameraPitch/Camera3D/Area3D"]
transform = Transform3D(-1, -8.74228e-08, 3.48787e-16, 8.74228e-08, -1, -3.48787e-16, 3.48787e-16, -3.48787e-16, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
shape = SubResource("ConvexPolygonShape3D_jb0iq")

[node name="BirdCamera3D" type="Camera3D" parent="CameraRoot/CameraYaw/CameraPitch"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.09105, 5.87832)

[node name="CanvasLayer" type="CanvasLayer" parent="." node_paths=PackedStringArray("target", "speedControl", "healthShieldControl")]
script = ExtResource("11_7hr8e")
target = NodePath("..")
speedControl = NodePath("ForwardSpeed")
healthShieldControl = NodePath("Life&Shield")

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("12_byp8v")

[node name="ForwardSpeed" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SpeedBar" type="ProgressBar" parent="CanvasLayer/ForwardSpeed"]
layout_mode = 2
offset_left = 33.0
offset_top = 9.0
offset_right = 258.0
offset_bottom = 36.0

[node name="Label" type="Label" parent="CanvasLayer/ForwardSpeed/SpeedBar"]
layout_mode = 0
offset_left = 85.0
offset_top = 37.0
offset_right = 133.0
offset_bottom = 60.0
text = "Speed"

[node name="DesiredSpeedBar" type="ProgressBar" parent="CanvasLayer/ForwardSpeed"]
layout_mode = 2
offset_left = 35.0
offset_top = 88.0
offset_right = 260.0
offset_bottom = 115.0

[node name="Label" type="Label" parent="CanvasLayer/ForwardSpeed/DesiredSpeedBar"]
layout_mode = 0
offset_left = 85.0
offset_top = 42.0
offset_right = 133.0
offset_bottom = 65.0
text = "Speed"

[node name="Life&Shield" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthBar3D" parent="CanvasLayer/Life&Shield" instance=ExtResource("13_paa5p")]
layout_mode = 1
offset_left = 259.0
offset_top = 28.0
offset_right = 607.0
offset_bottom = 55.0

[node name="ShieldBar3D" parent="CanvasLayer/Life&Shield" instance=ExtResource("14_mgcdj")]
layout_mode = 1
offset_left = 258.0
offset_top = -9.0
offset_right = 606.0
offset_bottom = 18.0

[connection signal="update_health_shield" from="." to="CanvasLayer" method="on_update_health"]
[connection signal="analog_input" from="CanvasLayer/Control" to="." method="_on_mouse_analog_input_analog_input"]
